--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
 	<script type="text/javascript" charset="utf8"
 		src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
-	<link href="./styles/style.css" rel="stylesheet" />
+	<link href="./style.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="#">
 	
 </head>
@@ -38,16 +38,16 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./images/c1.jpeg" class="d-block w-100" alt="...">
+					<img src="./c1.jpeg" class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="./images/c2.jpeg" class="d-block w-100" alt="...">
+					<img src="./c2.jpeg" class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="./images/c3.jpeg" class="d-block w-100" alt="...">
+					<img src="./c3.jpeg" class="d-block w-100" alt="...">
 				</div>
 				<div class="carousel-item">
-					<img src="./images/c4.jpeg" class="d-block w-100" alt="...">
+					<img src="./c4.jpeg" class="d-block w-100" alt="...">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
